# home-monitoring

./: .env.example  .gitignore  .travis.yml  CLAUDE.md  INFLUXDB_MEASUREMENTS_DOCUMENTATION.md  LICENSE  MEASUREMENT_CONSISTENCY_ANALYSIS.md  Makefile  README.md  ROADMAP.md  TESTING.md  debug_solaredge.py  docker-compose.yml  measurement_analysis.md  nancul-flash.md  pyproject.toml  requirements.txt  run_home_monitoring.sh  sam_digital_devices.json
.ai/: context.md  examples.md  git-workflow.md  patterns.md  rules.md
.claude/agents/: code-reviewer.md  explorer.md  implementer.md  verifier.md
.github/workflows/: ci.yml
analysis/: energy_stats.ipynb  gas_trend_analysis.ipynb
conf/: healthcheck.json  telegraf.conf
dashboards/: Home Monitoring - Overview.json
examples/: get_tibber_costs.py
homemonitoring/: collect_data_covid.py  collect_data_gardena.py  collect_data_netatmo.py  collect_data_solaredge.py  collect_data_tankerkoenig.py  collect_data_techem.py  collect_data_tibber.py  requirements.txt  tox.ini  update_dns.py
homemonitoring/homemonitoring/: __init__.py  gardena.py  handlers.py  influxdb.py  response_mappers.py  solaredge.py  tankerkoenig.py  techem.py  util.py
homemonitoring/tests/: __init__.py  fixtures.py  influxdb_test.py  response_mappers_test.py  solaredge_test.py  tankerkoenig_test.py  techem_test.py  util_test.py
integrations/iobroker/: DESIGN_SYSTEM.md  README.md  TESTING.md  diagnose_v2.js  energy_tab.js  energy_tab_v2.js  garden_panel.js  gardena_valve.js  ical_events.js  klima_v2.js  main_v2.js  mqtt_shelly.js  musik_v2.js  netatmo_wind.js  openweathermap_weather.js  reset_lock_target_state.js  sam_digital.js  solaredge_modbus.js  solaredge_power.js  sonos-http-api-setup.md  steuerung.js  steuerung_v2.js  suncalc_phases.js  tankerkoenig_quantiles.js  tankerkoenig_stats.js  telegram_waschmaschine.js  tibber_states.js  vis_card.js
integrations/iobroker/tools/: check_drift.sh  deploy_script.sh  deploy_vis.sh  export_scripts.sh  export_vis.sh
integrations/iobroker/vis/: DESIGN_SYSTEM.md
openspec/changes/add-freshness-healthcheck/: proposal.md  tasks.md
openspec/changes/add-grafana-history/: proposal.md  tasks.md
openspec/changes/add-maxxisun-integration/: proposal.md  tasks.md
openspec/changes/add-realtime-hybrid-energy-states/: proposal.md  tasks.md
openspec/changes/add-tibber-price-curve/: tasks.md
openspec/changes/deploy-evcc-energy-automation/: proposal.md  tasks.md
openspec/changes/fix-solaredge-power-metrics/: proposal.md  tasks.md
openspec/changes/harden-backup-and-recovery/: proposal.md  tasks.md
openspec/changes/harden-collector-runtime/: proposal.md  tasks.md
openspec/changes/harden-network-services/: tasks.md
openspec/changes/improve-dashboard-data-states/: proposal.md  tasks.md
openspec/changes/improve-homematic-reliability/: proposal.md  tasks.md
openspec/changes/redesign-dashboard-layout/: SESSION-HANDOFF.md  consistency-matrix-2026-07.md  energiefluss-hub-concept.md  energy-tab-concept.md  holistic-layout-plan.md  holistic-review-2026-07.md  main-concept-bubble.md  proposal.md  spacing-alignment-concept.md  tab-concepts.md  tasks.md
openspec/changes/restore-engineering-hygiene/: proposal.md  tasks.md
openspec/changes/revive-gardena-irrigation/: proposal.md  tasks.md
openspec/changes/rework-hourly-forecast/: proposal.md  tasks.md
openspec/changes/scrub-address-history/: proposal.md  tasks.md
openspec/changes/spike-tsdb-migration/: design.md  tasks.md
openspec/changes/upgrade-pi-os/: proposal.md  tasks.md
openspec/changes/version-iobroker-scripts/: proposal.md  tasks.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/collector-runtime/: spec.md
openspec/specs/dashboard-price-insight/: spec.md
openspec/specs/hourly-forecast/: spec.md
openspec/specs/iobroker-script-management/: spec.md
openspec/specs/irrigation-monitoring/: spec.md
openspec/specs/monitoring-healthcheck/: spec.md
openspec/specs/network-security/: spec.md
openspec/specs/project-docs/: spec.md
openspec/specs/realtime-energy-states/: spec.md
openspec/specs/timeseries-storage/: spec.md
scripts/: collect_gardena_data.py  collect_netatmo_data.py  collect_solaredge_data.py  collect_tankerkoenig_data.py  collect_techem_data.py  collect_tibber_data.py
src/home_monitoring/: config.py
src/home_monitoring/core/: exceptions.py
src/home_monitoring/models/: base.py
src/home_monitoring/repositories/: influxdb.py
src/home_monitoring/scripts/: __init__.py  collect_gardena_data.py  collect_netatmo_data.py  collect_sam_digital_data.py  collect_solaredge_data.py  collect_tankerkoenig_data.py  collect_techem_data.py  collect_tibber_data.py  healthcheck.py  update_dns.py
src/home_monitoring/services/: base.py  (+1 more)
tests/: .env.test  conftest.py
tests/fixtures/: __init__.py  influxdb.py
tests/integration/: test_iobroker_integration.py  test_iobroker_timestamps.py  test_scripts.py  test_solaredge_integration.py
tests/unit/: constants.py
(+114 files in other folders)
