[project]
name = "home-monitoring"
version = "0.1.0"
description = "Home monitoring system"
requires-python = ">=3.12.3"
# Only packages the code actually imports. Template leftovers (fastapi),
# superseded libraries (solaredge, netatmo, influxdb, websocket-client,
# oauthlib), and notebook-only packages were removed 2026-06-11 — see
# openspec/changes/restore-engineering-hygiene.
dependencies = [
    "aioinflux==0.9.0",
    "httpx==0.27.0",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "structlog==24.1.0",
    "lnetatmo>=4.2.0",
    "py-smart-gardena==1.3.9",
    # py-smart-gardena imports oauthlib but does not declare it (upstream
    # packaging bug) — keep the explicit pin
    "oauthlib==3.2.2",
    "pyTibber==0.32.2",
    "pyserial==3.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==24.2.0",
    "ruff==0.2.1",
    "mypy==1.8.0",
]
# for the notebooks in analysis/
analysis = [
    "pandas==2.2.2",
    "matplotlib==3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_monitoring"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
# magic values in assertions and many-argument helpers are idiomatic in tests
"tests/**" = ["PLR2004", "PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "lnetatmo",
    "gardena.smart_system",
    "aioinflux",
    "tibber",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require external services like InfluxDB)",
]
